--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <title>Login</title>
 </head>
 <body>
@@ -12,9 +14,12 @@
             <h1>Login</h1>
             <div class="input-box">
                 <input type="text" placeholder="username" required>
+                <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
                 <input type="password" placeholder="password">
+                <i class='bx bxs-lock-alt'></i>
+                
             </div>
             <div class="remember-forgot">
                 <label for="">
@@ -26,7 +31,7 @@
 
             <div class="register-link">
                 <p>Ainda não tem uma conta?
-                    <a href="#">Registrar</a>
+                    <a href="./registrar/register.html">Registrar</a>
                 </p>
             </div>
 
